<?xml version="1.0" encoding="UTF-8"?>

<resources>
  <string name="app_picker_name">Applications</string>
  <string name="app_name">BookMaster</string>
  <string name="bookmark_picker_name">Bookmarks</string>
  <string name="button_add_calendar">Add to calendar</string>
  <string name="button_add_contact">Add contact</string>
  <string name="button_back">Back</string>
  <string name="button_book_search">Book Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_clipboard_empty">Clipboard empty</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_dial">Dial number</string>
  <string name="button_done">Done</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product Search</string>
  <string name="button_search_book_contents">Search book contents</string>
  <string name="button_read_book">Browse book</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="menu_about">About</string>
  <string name="menu_help">Help</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_history">History</string>
  <string name="menu_share">Share</string>
  <string name="msg_about">Based on the open source ZXing Barcode Library</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_contents">Contents</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_encode_in_progress">Generating a barcode\u2026</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_loading_apps">Loading list of applications\u2026</string>
  <string name="msg_not_our_results">You are leaving this application. The search results you will see are not related to this application.</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_sbc_unknown_page">Unknown page</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  <string name="msg_share_subject_line">Here\'s the contents of a barcode I scanned</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_decode_1D_title">Decode 1D barcodes</string>
  <string name="preferences_decode_QR_title">Decode QR Codes</string>
  <string name="preferences_general_title">General settings</string>
  <string name="preferences_name">Settings</string>
  <string name="preferences_play_beep_title">Beep</string>
  <string name="preferences_vibrate_title">Vibrate</string>
  <string name="preferences_result_title">Result settings</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_custom_product_search_summary">Use %s as a placeholder for the product ID</string>
  <string name="result_address_book">Found contact info</string>
  <string name="result_calendar">Found calendar event</string>
  <string name="result_email_address">Found email address</string>
  <string name="result_geo">Found geographic coordinates</string>
  <string name="result_isbn">Found book</string>
  <string name="result_product">Found product</string>
  <string name="result_sms">Found SMS address</string>
  <string name="result_tel">Found phone number</string>
  <string name="result_text">Found plain text</string>
  <string name="result_uri">Found URL</string>
  <string name="history_title">History</string>
  <string name="history_clear_text">Clear history</string>
  <string name="sbc_name">Google Book Search</string>
  <string name="share_name">Share via barcode</string>
  <string name="title_about">Barcode Scanner v</string>
  <string name="zxing_url">http://code.google.com/p/zxing</string>
  
  <string name="book">book</string>
  <string name="bookauthor">Author</string>
  <string name="booktranlator">Tranlator</string>  
  <string name="bookisbn">ISBN</string>
  <string name="bookpages">Pages</string>
  <string name="bookprice">Price</string>
  <string name="bookpublisher">Publisher</string>    
  <string name="bookpubdate">Publish Date</string>
  <string name="booksummary">Summary</string>
  <string name="bookauthorintro">Author Intro</string>
  <string name="bookrate">Rate</string>
  <string name="booknumRaters">numRaters</string> 
  <string name="bookvotes"> Votes</string> 
  <string name="bookpub">published</string>
  
  <string name="select_dialog">Please Select</string>
    
  <string name="notify_succeeded">succeeded</string> 
  <string name="notify_network_error">Network Error</string>
  <string name="notify_service_exception">Service Exception</string>
  <string name="notify_no_result">No results</string>
  <string name="notify_newversion">Have new verion</string>
  <string name="notify_no_permision">No permision</string>
	  
  <string name="alert_dialog_ok">OK</string>
  <string name="alert_dialog_cancel">Cancel</string>  
	
  <string name="suggest">suggest</string>
  <string name="suggest_title">Please Leave your suggest</string>
  <string name="invalidemail">Invalid Email</string>
  <string name="submitsuggest">Suggest</string>
  <string name="msg_title_adsearchlimit">Book name and tag can not be empty</string> 
  <string name="msg_adsearchlimit">Please input book name or tag</string>  
    
  <string name="button_doubanbook_search">Search Douban</string>
  <string name="msg_searchlimittitle">At least 1 letters</string>
  <string name="msg_searchlimit">Please input at least 1 letters</string> 
  
  <string name="readreviews">Reviews</string>
  <string name="compareprices">Prices</string>
  
  <string name="btn_previous">Previous</string>
  <string name="btn_next">Next</string>
  <string name="no_Summary">No Summary</string>
  <string name="no_author_intro">No Author Introductoin</string>
  
  <string name="advsearch">Search</string>
  <string name="tags">Tags</string>
  <string name="search">Search</string>
  <string name="search_title">Title</string> 
  
  <string name="search_hint">Book</string>       
  <string name="abouttext">淘书趣，给你淘书的乐趣，买书从此不再烦恼。在书店看到一本书，不知道该不该买？淘书趣帮你搞定，扫描条码，在豆瓣上找到这本书，看看别人的书评和评级，看看网上书店的价格，搜一下相关的书籍，轻松做出您的购买决定吧！以后再不会买到不想要的书了！
  在目前没有好的豆瓣客户端的情况下，淘书趣也可以作为豆瓣客户端使用啊！另外，淘书趣还可以作为条码和二维码识别软件使用啊！\n软件问题及合作请联系作者offbye@gmail.com
  </string>
  
  <string name="msg_loading">Loading</string>
  <string name="msg_wait">Please Wait...</string> 
  <string name="msg_gotobuylink">Do you want to go to the book buy website?</string>
  <string name="msg_review_open">Click open or collapse，long click  share or read all texts</string>
  <string name="msg_no_connenction">no network connenction</string>
  <string name="msg_no_connenction_detail">no useable network connenctions</string>        
</resources>